# kraken-ai-trader

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  API_INTEGRATION_GUIDE.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CROSS_VALIDATION_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  IMPROVEMENTS_ROADMAP.md  IMPROVEMENTS_ROADMAP_V2.md  IMPROVEMENTS_ROADMAP_V3.md  IMPROVEMENTS_ROADMAP_V4.md  IMPROVEMENTS_ROADMAP_V5.md  IMPROVEMENTS_ROADMAP_V6.md  IMPROVEMENTS_ROADMAP_V7.md  IMPROVEMENTS_ROADMAP_V8.md  KRAKEN_CPP_BOT_SUMMARY.md  Must_read_before_any_agent_task.md  PARAMETERS_GUIDE.md  README.md  REAL_DATA_VALIDATION.md  REGIME_DETECTION_IMPROVEMENTS.md  RESULTS_LOG.md  STRATEGY_LOG.md  VALIDATION_SUMMARY.md  api.js  clean_trade_log.py  config.js  continuous_monitor.js  crypto-trader.html  debug_pairs.cpp  fix_parsing.js  fix_parsing2.js  game.js  index.html  kraken.js  monitor_live_trading.js  (+17 more)
.github/: kraken-agent.yml
bot/: BUILD_AND_DEPLOY.md  CMakeLists.txt  README.md  bot_status.json  test_validation  test_validation.cpp
bot/include/: kraken_api.hpp  learning_engine.hpp  market_data_cache.hpp
bot/src/: kraken_api.cpp  learning_engine.cpp  main.cpp  main.cpp.backup  main_clean.cpp  main_old.cpp  market_data_cache.cpp
config/: api_keys.json.example  bot_config.json  data_mined_strategy_rules.json  index.js  prediction_params.json
dashboard/: index.html  prediction_charts.js  styles_prediction.css
data/: .gitignore  market_cache.json  market_data.db  prediction_markets.db  price_history.db  trades.db
kraken-data/: README.md  (+5 more)
(+122 files in other folders)
